fix potential modification of unmodifiable list by FactoryRegistry#getHelpData